// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tauri command registration contract > parsed backend handlers snapshot (informational) 1`] = `
[
  "assign_capture_to_bug",
  "copy_bug_to_clipboard",
  "delete_setting",
  "disable_startup",
  "emit_screenshot_captured",
  "enable_startup",
  "end_bug_capture",
  "end_session",
  "format_session_export",
  "generate_bug_description",
  "generate_session_summary",
  "get_active_bug_id",
  "get_active_session",
  "get_active_session_id",
  "get_all_settings",
  "get_app_version",
  "get_bug_captures",
  "get_bug_notes",
  "get_bugs_by_session",
  "get_claude_status",
  "get_hotkey_config",
  "get_session_notes",
  "get_session_summaries",
  "get_setting",
  "get_template_path",
  "get_template_source",
  "get_unsorted_captures",
  "greet",
  "has_completed_setup",
  "is_hotkey_registered",
  "list_sessions",
  "mark_setup_complete",
  "open_annotation_window",
  "open_bug_folder",
  "open_session_folder",
  "open_template_in_editor",
  "parse_console_screenshot",
  "refine_bug_description",
  "refresh_claude_status",
  "reload_template",
  "render_bug_template",
  "reset_setup",
  "reset_template_to_default",
  "resume_session",
  "save_annotated_image",
  "save_bug_description",
  "save_custom_template",
  "set_custom_template_path",
  "set_setting",
  "start_bug_capture",
  "start_file_watcher",
  "start_session",
  "stop_file_watcher",
  "ticketing_authenticate",
  "ticketing_check_connection",
  "ticketing_create_ticket",
  "ticketing_get_credentials",
  "ticketing_save_credentials",
  "trigger_screenshot",
  "update_bug_console_parse",
  "update_bug_notes",
  "update_capture_console_flag",
  "update_hotkey_config",
  "update_session_notes",
  "update_session_status",
  "update_tray_icon",
  "update_tray_menu",
  "update_tray_tooltip",
]
`;

exports[`Tauri command registration contract > parsed frontend commands snapshot (informational) 1`] = `
[
  "assign_capture_to_bug",
  "copy_bug_to_clipboard",
  "delete_setting",
  "end_bug_capture",
  "generate_bug_description",
  "get_active_session",
  "get_all_settings",
  "get_bug_captures",
  "get_bug_notes",
  "get_bugs_by_session",
  "get_claude_status",
  "get_session_notes",
  "get_session_summaries",
  "get_setting",
  "get_unsorted_captures",
  "greet",
  "has_completed_setup",
  "list_sessions",
  "mark_setup_complete",
  "open_annotation_window",
  "open_bug_folder",
  "open_session_folder",
  "parse_console_screenshot",
  "refine_bug_description",
  "refresh_claude_status",
  "reload_template",
  "render_bug_template",
  "reset_setup",
  "resume_session",
  "save_annotated_image",
  "save_bug_description",
  "set_custom_template_path",
  "set_setting",
  "start_bug_capture",
  "start_file_watcher",
  "start_session",
  "stop_file_watcher",
  "ticketing_authenticate",
  "ticketing_check_connection",
  "ticketing_create_ticket",
  "ticketing_get_credentials",
  "ticketing_save_credentials",
  "trigger_screenshot",
  "update_bug_console_parse",
  "update_bug_notes",
  "update_capture_console_flag",
  "update_session_notes",
  "update_session_status",
  "update_tray_icon",
  "update_tray_menu",
  "update_tray_tooltip",
]
`;
